Fixed dynamic type on Safari
* did some fun Sass stuff I didn't know about before
* improved dev workflow with Prettier slightly

--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -37,16 +37,20 @@ Body
 ========================================================================== */
 
 body {
-    font-size: 1.5em;
+    font: {
+        size: 1.5em;
+        weight: 400;
+    }
     line-height: 1.6;
-    font-weight: 400;
     margin: 0;
 
     @include themed(background-color, background);
 
-    transition-property: background, color;
-    transition-duration: 250ms, 75ms;
-    transition-timing-function: ease-in-out, ease;
+    transition: {
+        property: background, color;
+        duration: 250ms, 75ms;
+        timing-function: ease-in-out, ease;
+    }
 }
 
 p {
@@ -58,8 +62,10 @@ p {
 u,
 ins {
     text-decoration: none;
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
+    border-bottom: {
+        width: 1px;
+        style: solid;
+    }
     @include themed(border-bottom-color, text);
 }
 
@@ -74,41 +80,12 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0.67em 0;
-    margin-top: 0;
-    font-weight: 300;
-    font-family: $heading-font;
-    text-rendering: optimizeLegibility;
-}
-
-h1 {
-    font-size: 4rem;
-    line-height: 1.2;
-}
-
-h2 {
-    font-size: 3.6rem;
-    line-height: 1.25;
-}
-
-h3 {
-    font-size: 3rem;
-    line-height: 1.3;
-}
-
-h4 {
-    font-size: 2.4rem;
-    line-height: 1.35;
-}
-
-h5 {
-    font-size: 1.8rem;
-    line-height: 1.5;
-}
-
-h6 {
-    font-size: 1.5rem;
-    line-height: 1.6;
+    margin: {
+        top: 0;
+        right: 0;
+        bottom: 0.67em;
+        left: 0;
+    }
 }
 
 /*
