--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -4,10 +4,51 @@ TYPOGRAPHY
 ================================================ */
 
 body {
-    font: -apple-system-body;
-    font-family: $base-font;
-    font-size: $body-font-size;
+    font: {
+        family: $base-font;
+        size: $body-font-size;
+    }
     @include themed(color, text);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: $heading-font;
+    text-rendering: optimizeLegibility;
+}
+
+h1 {
+    font-size: 4rem;
+    line-height: 1.2;
+}
+
+h2 {
+    font-size: 3.6rem;
+    line-height: 1.25;
+}
+
+h3 {
+    font-size: 3rem;
+    line-height: 1.3;
+}
+
+h4 {
+    font-size: 2.4rem;
+    line-height: 1.35;
+}
+
+h5 {
+    font-size: 1.8rem;
+    line-height: 1.5;
+}
+
+h6 {
+    font-size: 1.5rem;
+    line-height: 1.6;
 }
 
 p {
@@ -16,4 +57,36 @@ p {
 
 li {
     font-size: $body-font-size;
+}
+
+@supports (font: -apple-system-body) {
+    body {
+        font: -apple-system-body;
+    }
+}
+
+@supports (font: -apple-system-headline) {
+    h1 {
+        font: -apple-system-headline;
+    }
+}
+
+@supports (font: -apple-system-subheadline) {
+    h2,
+    h3 {
+        font: -apple-system-subheadline;
+    }
+}
+
+@supports (font: -apple-system-caption1) {
+    h4 {
+        font: -apple-system-caption1;
+    }
+}
+
+@supports (font: -apple-system-caption2) {
+    h5,
+    h6 {
+        font: -apple-system-caption2;
+    }
 }
